--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "open-gitup",
   "main": "./lib/open-gitup",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Open GitUp from Atom !",
   "keywords": [
-    "git", "GitUp", "GitHub", "VCS"
+    "git",
+    "GitUp",
+    "GitHub",
+    "VCS"
   ],
   "activationCommands": {
     "atom-workspace": "open-gitup:open"
@@ -14,6 +17,5 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
