--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "open-gitup",
   "main": "./lib/open-gitup",
   "version": "0.0.1",
-  "description": "Open GitUp from Atom !",
+  "description": "Open GitUp from Atom",
   "keywords": [
     "git",
     "GitUp",
-    "GitHub",
-    "VCS"
+    "GitHub"
   ],
   "activationCommands": {
     "atom-workspace": "open-gitup:open"
