--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "activationCommands": {
     "atom-workspace": "open-gitup:open"
   },
-  "repository": "https://github.com/ystkme/open-gitup",
+  "repository": "https://github.com/yoshitakame/open-gitup",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
